bug-fix: endless loop when ref. product is in a loop itself